--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: xalute
 description: "Xalute platform"
-publish_to: 'oslab'
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_secure_storage: ^9.0.0
   fl_chart: ^0.68.0
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
@@ -22,6 +23,12 @@ dependencies:
   flutter_native_splash: ^2.3.5
   lottie: ^2.4.0
   flutter_date_pickers: ^0.4.0
+  firebase_auth: ^5.7.0
+  firebase_core: ^3.4.0
+  google_sign_in: ^6.2.1
+  sign_in_with_apple: ^6.1.0
+  jwt_decoder: ^2.0.1
+
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
