--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   google_sign_in: ^6.2.1
   sign_in_with_apple: ^6.1.0
   jwt_decoder: ^2.0.1
+  flutter_dotenv:  ^5.0.2
 
 
 dev_dependencies:
